2012-02-17 Borut Razem <borut.razem AT gmail.com>

	* local/dev.mk, local/mypants.mk: added TARGETCPPFLAGS

2012-02-16 Borut Razem <borut.razem AT gmail.com>

	* local/dhcp101.mk:
	  HOSTOS and TARGETOS renamed to i386-apple-darwin

2012-02-13 Borut Razem <borut.razem AT gmail.com>

	* local/mirror-doors.mk, local/dhcp101.mk:
	  added --disable-dependency-tracking configure flag to enable
	  support/sdbinutils/bfd compilation

2012-02-11 Borut Razem <borut.razem AT gmail.com>

	* components/sdcc.mk, lib/cross.mk: added TARGETAR

2012-10-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* lib/variables.mk:
	  Added test-ucgbz80 to the list of regression test targets.

2012-01-16 Borut Razem <borut.razem AT gmail.com>

	* local/freebsd-i386.mk: disabled -j 2 since src/z80/ralloc2.cc
	  compilation mysteriously fails if enabled;
	  added TARGETCPPFLAGS so that the cpp can finde stx and boost
	  include files during configure

2012-01-06 Borut Razem <borut.razem AT gmail.com>

	* local/dhcp101.mk: added TARGETCPPFLAGS

2012-01-05 Borut Razem <borut.razem AT gmail.com>

	* local/dhcp101.mk:
	  created for Mac OS X universal builds on Mac OS X 10.4 i386 machine

2012-01-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* local/cf-x86-x86_64-w64-mingw32.mk,
	* local/derna-i586-mingw32msvc.mk: increased stack size 32M/64M so it
	  never overflows; stack overflow crashes sdcc without error message

2011-12-25 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* local/cf-x86-x86_64-w64-mingw32.mk: increase stack size to 4M
	  so compiling gcc-torture-execute-div-cmp-1 won't stack overflow

2011-10-11 Borut Razem <borut.razem AT gmail.com>

	* local/cf-x86-x86_64-w64-mingw32.mk, local/derna-i586-mingw32msvc.mk:
	  turn on -O2 optimization for mingw* builds

2011-10-05 Philipp Klaus Krause <pkk@spth.de>

	* lib/variables.mk:
	  Add test-ucz80 to the list of regression test targets.

2011-09-04 Borut Razem <borut.razem AT gmail.com>
