@@ -5,7 +5,8 @@ TARGETOS = i386-unknown-netbsd
 HOSTOS = i386-unknown-netbsd
 
 # local includes and libraries
-TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
-TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include"
-# readline library at /usr/pkg/lib 
+# readline at /usr/pkg
+TARGETCXXFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include -I/usr/pkg/include"
+TARGETCFLAGS = "-O2 -I$(HOME)/local-$(HOSTNAME)/include -I/usr/pkg/include"
+TARGETCPPFLAGS = "-I$(HOME)/local-$(HOSTNAME)/include -I/usr/pkg/include"
 TARGETLDFLAGS = "-L$(HOME)/local-$(HOSTNAME)/lib -L/usr/pkg/lib"
