@@ -1,3 +1,8 @@
+2012-03-01 Borut Razem <borut.razem AT gmail.com>
+
+	* components/sdcc.mk: removed comment "test-gbz80 temporary disabled"
+	* local/netbsd-i386.mk: added TARGETCPPFLAGS, added -I/usr/pkg/include
+
 2012-02-17 Borut Razem <borut.razem AT gmail.com>
 
 	* local/dev.mk, local/mypants.mk: added TARGETCPPFLAGS
